k8s/memo-service-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: lectio-memo-service
  labels:
    app: lectio
spec:
  selector:
    matchLabels:
      app: lectio
      tier: backend
  strategy:
    type: Recreate
  replicas: 3
  template:
    metadata:
      labels:
        app: lectio
        tier: backend
    spec:
      containers:
      - image: asia.gcr.io/kavinvin-211411/memo-service:latest
        name: lectio-memo-service
        ports:
        - containerPort: 9000
          name: memo
