k8s/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          imagePullPolicy: Always
          image: asia.gcr.io/kavinvin-211411/search-service
          ports:
            - containerPort: 3000
