k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: frontend
