k8s/memo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memo-service
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 80
  selector:
    app: memo
