k8s/mongo-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: mongo-nodeport
spec:
  selector:    
    app: my-app
  type: NodePort
  ports:  
  - name: TCP
    port: 80
    targetPort: 80
    nodePort: 30036
    protocol: TCP
