k8s/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  ports:
  - name: http
    targetPort: 9001
    port: 80
  selector:
    app: search
