k8s/frontend-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress-tls
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - hosts:
    - lectio.itforge.io
    secretName: lectio-itforge-io-tls
  rules:
  - host: lectio.itforge.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: http
