k8s/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: lectio.itforge.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: http
