k8s/ingress-config.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lectio-ingress
spec:
  backend:
    serviceName: lectio-memo-service
    servicePort: 9000
