k8s/memo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: memo-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: api.lectio.itforge.io
    http:
      paths:
      - path: /memos
        backend:
          serviceName: memo-service
          servicePort: http
