k8s/search-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: search-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: api.lectio.itforge.io
    http:
      paths:
      - path: /search
        backend:
          serviceName: search-service
          servicePort: http
